--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/IamMrUnicorn/SDC-API#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.2.0"
+    "mongoose": "^7.2.0",
+    "pg": "^8.11.0",
+    "pg-promise": "^11.4.3",
+    "sequelize": "^6.31.1"
   }
 }
